# moa-like-structures

./: .env.example  .gitignore  CustomTestModel.py  README.md  alpaca_eval.bat  alpaca_eval.sh  combine_token_costs.py  config.toml  eval_alpaca_generate.py  eval_alpaca_replenish.py  eval_arc_challenge.py  eval_arc_easy.py  eval_gsm8k.py  eval_humaneval.py  eval_mmlu.py  eval_truthfulqa.py  eval_winogrande.py  main.py  model_structures.py  pyproject.toml  test.py  utils.py  vllm_serve.py  vllm_serve_1.sh  vllm_serve_2.sh  vllm_serve_3.sh  vllm_serve_4.sh  vllm_serve_5.sh  vllm_serve_6.sh  vllm_serve_7.sh  vllm_serve_8.sh
Agents/: Aggregator.py  BaseAgent.py  Proposer.py  Refiner.py
