[project]
name = "hierarchial-moa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[cli]>=0.29.3",
    "loguru>=0.7.3",
    "openai>=1.66.3",
    "together>=1.4.6",
    "toml>=0.10.2",
    "transformers>=4.49.0",
    "vllm>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
