[project]
name = "hierarchial-moa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-eval>=0.6.6",
    "datasets>=3.4.1",
    "deepeval>=2.6.4",
    "dotenv>=0.9.9",
    "huggingface-hub[cli]>=0.29.3",
    "loguru>=0.7.3",
    "openai>=1.66.3",
    "together>=1.4.6",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "vllm>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
